Feat/sales export modal (#239)
* [REFACTOR]: expands functionalities of ProductSelector

* [FEATURE] apply new ProductSelector to OrderExportModal

* [FEATURE] apply coupon & voucher

* [CHORE]: add missing label

* [BUGFIX] add categories clear when changing specify

--- a/src/translations/locales/en-us.json
+++ b/src/translations/locales/en-us.json
@@ -583,6 +583,8 @@
   "common.label.orderLogPrice": "Order Price",
   "common.label.orderLogPriceTotal": "Order Total",
   "common.label.orderLogStatus": "Order Status",
+  "common.label.orderLogCategory": "Order Category",
+  "common.label.otherSpecifyCategories": "Other Specify Categories",
   "common.label.orderLogUpdatedDate": "Updated Date",
   "common.label.orderProductAmount": "Item Amount",
   "common.label.orderProductAutoRenew": "Auto Renew",
@@ -749,6 +751,11 @@
   "common.product.allProgramPackagePlan": "All Program Packages",
   "common.product.allProgramPlan": "All Program Plan",
   "common.product.allProjectPlan": "All Projects",
+  "common.label.allProjectPlan": "All Project Plan",
+  "common.label.allAppointmentPlan": "All Appointment Plan",
+  "common.label.allPodcastPlan": "All Podcast Plan",
+  "common.label.allCouponPlan": "All Coupon Plan",
+  "common.label.allVocherPlan": "All Vocher Plan",
   "common.product.appointmentPlan": "Appointment",
   "common.product.card": "Card",
   "common.product.merchandise": "Merchandise",
