--- a/src/translations/locales/zh-cn.json
+++ b/src/translations/locales/zh-cn.json
@@ -583,6 +583,8 @@
   "common.label.orderLogPrice": "订单金额",
   "common.label.orderLogPriceTotal": "订单总额",
   "common.label.orderLogStatus": "订单状态",
+  "common.label.orderLogCategory": "訂單項目",
+  "common.label.otherSpecifyCategories": "其他特定項目",
   "common.label.orderLogUpdatedDate": "更新日期",
   "common.label.orderProductAmount": "项目数量",
   "common.label.orderProductAutoRenew": "自动续订",
@@ -749,6 +751,11 @@
   "common.product.allProgramPackagePlan": "全部课程组合",
   "common.product.allProgramPlan": "全部课程方案",
   "common.product.allProjectPlan": "全部专案",
+  "common.label.allProjectPlan": "全部專案",
+  "common.label.allAppointmentPlan": "全部預約",
+  "common.label.allPodcastPlan": "全部廣播訂閱頻道",
+  "common.label.allCouponPlan": "所有折價方案",
+  "common.label.allVocherPlan": "所有兌換方案",
   "common.product.appointmentPlan": "预约",
   "common.product.card": "会员卡",
   "common.product.merchandise": "商品",
