--- a/src/translations/locales/id.json
+++ b/src/translations/locales/id.json
@@ -583,6 +583,8 @@
   "common.label.orderLogPrice": "Harga Pesanan",
   "common.label.orderLogPriceTotal": "Total Pesanan",
   "common.label.orderLogStatus": "Status Pesanan",
+  "common.label.orderLogCategory": "Order Category",
+  "common.label.otherSpecifyCategories": "Other Specify Categories",
   "common.label.orderLogUpdatedDate": "Tanggal Diperbarui",
   "common.label.orderProductAmount": "Jumlah Barang",
   "common.label.orderProductAutoRenew": "Perpanjangan Otomatis",
@@ -749,6 +751,11 @@
   "common.product.allProgramPackagePlan": "Semua Paket Program",
   "common.product.allProgramPlan": "Semua Paket Program",
   "common.product.allProjectPlan": "Semua Proyek",
+  "common.label.allProjectPlan": "All Project Plan",
+  "common.label.allAppointmentPlan": "All Appointment Plan",
+  "common.label.allPodcastPlan": "All Podcast Plan",
+  "common.label.allCouponPlan": "All Coupon Plan",
+  "common.label.allVocherPlan": "All Vocher Plan",
   "common.product.appointmentPlan": "Janji",
   "common.product.card": "Kartu",
   "common.product.merchandise": "Merchandise",
