--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -583,6 +583,8 @@
   "common.label.orderLogPrice": "Giá đặt hàng",
   "common.label.orderLogPriceTotal": "Tổng số đơn đặt hàng",
   "common.label.orderLogStatus": "Trạng thái Đơn hàng",
+  "common.label.orderLogCategory": "Order Category",
+  "common.label.otherSpecifyCategories": "Other Specify Categories",
   "common.label.orderLogUpdatedDate": " Ngày cập nhật ",
   "common.label.orderProductAmount": " Số lượng mặt hàng ",
   "common.label.orderProductAutoRenew": "Tự động gia hạn",
@@ -749,6 +751,11 @@
   "common.product.allProgramPackagePlan": " Tất cả các gói chương trình ",
   "common.product.allProgramPlan": " Tất cả Kế hoạch Chương trình",
   "common.product.allProjectPlan": " Tất cả các dự án ",
+  "common.label.allProjectPlan": "All Project Plan",
+  "common.label.allAppointmentPlan": "All Appointment Plan",
+  "common.label.allPodcastPlan": "All Podcast Plan",
+  "common.label.allCouponPlan": "All Coupon Plan",
+  "common.label.allVocherPlan": "All Vocher Plan",
   "common.product.appointmentPlan": "Cuộc hẹn",
   "common.product.card": "Thẻ",
   "common.product.merchandise": "Hàng hóa",
