[FEATURE] applying project role

--- a/src/translations/locales/id.json
+++ b/src/translations/locales/id.json
@@ -447,6 +447,10 @@
   "common.MetaProductDeletionBlock.deleteProduct": "刪除{metaProduct}",
   "common.MetaProductDeletionBlock.deleteProductWarning": "請仔細確認是否真的要刪除{metaProduct}，因為一旦刪除就無法恢復。",
   "common.MetaProductDeletionBlock.successfullyDeleted": "Successfully deleted",
+  "common.category.all": "全部產品",
+  "common.category.specify": "指定產品",
+  "common.category.specifyCouponPlan": "指定折價方案",
+  "common.category.specifyVoucherPlan": "指定兌換方案",
   "common.confirmPrivatelyPublishedNotation": "將不會出現在列表，僅以私下提供連結的方式。",
   "common.confirmPrivatelyPublishedTitle": "確定要設為私密發佈？",
   "common.event.cancelSubscriptionSuccess": "Cancel SubscriptionSuccess",
@@ -469,17 +473,22 @@
   "common.label.adminBackstage": "Admin Belakang Panggung",
   "common.label.all": "Semua",
   "common.label.allActivityTicket": "Semua aktivitas",
+  "common.label.allAppointmentPlan": "All Appointment Plan",
+  "common.label.allCouponPlan": "All Coupon Plan",
   "common.label.allGiftPlan": "所有贈品方案",
   "common.label.allMembers": "Semua Anggota",
   "common.label.allMembershipCard": "Semua Kartu Keanggotaan",
   "common.label.allMerchandise": "Semua merchandise",
+  "common.label.allPodcastPlan": "All Podcast Plan",
   "common.label.allPodcastProgram": "Semua Podcast",
   "common.label.allProgram": "Semua program abadi",
   "common.label.allProgramContent": "Semua konten program",
   "common.label.allProgramPackage": "Semua Paket Program",
   "common.label.allProgramPackagePlan": "Semua Paket Program",
   "common.label.allProgramPlan": "Semua rencana program",
+  "common.label.allProjectPlan": "All Project Plan",
   "common.label.allShop": "Semua Toko",
+  "common.label.allVocherPlan": "All Vocher Plan",
   "common.label.alreadyMember": "Sudah menjadi anggota?",
   "common.label.amountDollar": "{amount} dolar",
   "common.label.amountParticipants": "{amount} Orang",
@@ -569,11 +578,13 @@
   "common.label.ogTitle": "og:title",
   "common.label.openGraphSettings": "Open Graph Settings",
   "common.label.optional": "Opsional",
+  "common.label.orderCategory": "訂單項目",
   "common.label.orderDiscountId": "ID Diskon",
   "common.label.orderDiscountName": "Nama Diskon",
   "common.label.orderDiscountPrice": "Harga Diskon",
   "common.label.orderDiscountPriceTotal": "Total Diskon",
   "common.label.orderDiscountType": "Jenis Diskon",
+  "common.label.orderLogCategory": "Order Category",
   "common.label.orderLogCreatedDate": "Tanggal Dibuat",
   "common.label.orderLogDate": "Tanggal Pemesanan",
   "common.label.orderLogId": "ID Pesanan",
@@ -583,8 +594,6 @@
   "common.label.orderLogPrice": "Harga Pesanan",
   "common.label.orderLogPriceTotal": "Total Pesanan",
   "common.label.orderLogStatus": "Status Pesanan",
-  "common.label.orderLogCategory": "Order Category",
-  "common.label.otherSpecifyCategories": "Other Specify Categories",
   "common.label.orderLogUpdatedDate": "Tanggal Diperbarui",
   "common.label.orderProductAmount": "Jumlah Barang",
   "common.label.orderProductAutoRenew": "Perpanjangan Otomatis",
@@ -595,6 +604,7 @@
   "common.label.orderProductType": "Jenis Produk",
   "common.label.orderStatus": "Status Pesanan",
   "common.label.originalPrice": "Harga Asli",
+  "common.label.otherSpecifyCategories": "Other Specify Categories",
   "common.label.ownedCoins": "Koin Milik",
   "common.label.owner": "Pendiri",
   "common.label.pageTitle": "Page Title",
@@ -638,6 +648,7 @@
   "common.label.publishSettings": "Publikasikan",
   "common.label.publishedCreators": "Diterbitkan ({menghitung})",
   "common.label.purchase": "Beli",
+  "common.label.reason": "reason",
   "common.label.resetPassword": "Setel Ulang Kata Sandi",
   "common.label.roleAdmin": "Peran",
   "common.label.roleSettings": "Peran",
@@ -739,6 +750,7 @@
   "common.menu.tempoDelivery": "Pengiriman Tempo",
   "common.period.no": "Tidak ada periode penggunaan",
   "common.placeholder.enterUrlLink": "Masukkan tautan URL",
+  "common.placeholder.rejectedReason": "please enter reject reason",
   "common.placeholder.useCommaToSeparateKeywords": "Use comma to separate keywords",
   "common.product.activityTicket": "Aktivitas",
   "common.product.allActivityTicket": "Semua Aktivitas",
@@ -751,11 +763,6 @@
   "common.product.allProgramPackagePlan": "Semua Paket Program",
   "common.product.allProgramPlan": "Semua Paket Program",
   "common.product.allProjectPlan": "Semua Proyek",
-  "common.label.allProjectPlan": "All Project Plan",
-  "common.label.allAppointmentPlan": "All Appointment Plan",
-  "common.label.allPodcastPlan": "All Podcast Plan",
-  "common.label.allCouponPlan": "All Coupon Plan",
-  "common.label.allVocherPlan": "All Vocher Plan",
   "common.product.appointmentPlan": "Janji",
   "common.product.card": "Kartu",
   "common.product.merchandise": "Merchandise",
@@ -805,6 +812,7 @@
   "common.status.unknown": "未知",
   "common.status.unpublished": "Tidak diterbitkan",
   "common.status.visible": "Tampilkan",
+  "common.text.applyingProjectRole": "{name} 申請標成為「{identity}」",
   "common.text.cancelSubscriptionDate": "Dibatalkan pada {tanggal} berhenti berlangganan",
   "common.text.cancelSubscriptionDescription": "Setelah membatalkan langganan, pengguna ini akan menghentikan layanan pada periode berikutnya dan tidak akan dikenakan biaya lagi secara otomatis.",
   "common.text.cancelSubscriptionTitle": "Apakah Anda yakin ingin membatalkan langganan ?",
@@ -840,6 +848,7 @@
   "common.ui.addParticipant": "Add participant",
   "common.ui.addProperty": "Tambahkan Bidang",
   "common.ui.addToCart": "Tambahkan ke Keranjang",
+  "common.ui.agree": "Agree",
   "common.ui.back": "Kembali",
   "common.ui.backToHomepage": "Kembali ke Beranda",
   "common.ui.backstage": "Kelola di belakang panggung",
