--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -447,6 +447,10 @@
   "common.MetaProductDeletionBlock.deleteProduct": "刪除{metaProduct}",
   "common.MetaProductDeletionBlock.deleteProductWarning": "請仔細確認是否真的要刪除{metaProduct}，因為一旦刪除就無法恢復。",
   "common.MetaProductDeletionBlock.successfullyDeleted": "Successfully deleted",
+  "common.category.all": "全部產品",
+  "common.category.specify": "指定產品",
+  "common.category.specifyCouponPlan": "指定折價方案",
+  "common.category.specifyVoucherPlan": "指定兌換方案",
   "common.confirmPrivatelyPublishedNotation": "將不會出現在列表，僅以私下提供連結的方式。",
   "common.confirmPrivatelyPublishedTitle": "確定要設為私密發佈？",
   "common.event.cancelSubscriptionSuccess": "取消訂閱成功",
@@ -469,17 +473,22 @@
   "common.label.adminBackstage": "管理後台",
   "common.label.all": "全部",
   "common.label.allActivityTicket": "所有活動",
+  "common.label.allAppointmentPlan": "全部預約",
+  "common.label.allCouponPlan": "所有折價方案",
   "common.label.allGiftPlan": "所有贈品方案",
   "common.label.allMembers": "全部會員",
   "common.label.allMembershipCard": "所有會員卡",
   "common.label.allMerchandise": "所有商品",
+  "common.label.allPodcastPlan": "全部廣播訂閱頻道",
   "common.label.allPodcastProgram": "所有廣播",
   "common.label.allProgram": "所有單次課程",
   "common.label.allProgramContent": "所有課程內容",
   "common.label.allProgramPackage": "所有課程組合",
   "common.label.allProgramPackagePlan": "所有課程組合方案",
   "common.label.allProgramPlan": "所有課程方案",
+  "common.label.allProjectPlan": "全部專案",
   "common.label.allShop": "全部商店",
+  "common.label.allVocherPlan": "所有兌換方案",
   "common.label.alreadyMember": "已經是是會員嗎？",
   "common.label.amountDollar": "{amount} 元",
   "common.label.amountParticipants": "{amount} 人",
@@ -569,11 +578,13 @@
   "common.label.ogTitle": "og:title",
   "common.label.openGraphSettings": "Open Graph 設定",
   "common.label.optional": "非必填",
+  "common.label.orderCategory": "訂單項目",
   "common.label.orderDiscountId": "折扣編號",
   "common.label.orderDiscountName": "折扣名稱",
   "common.label.orderDiscountPrice": "折扣金額",
   "common.label.orderDiscountPriceTotal": "折扣總額",
   "common.label.orderDiscountType": "折扣類別",
+  "common.label.orderLogCategory": "訂單項目",
   "common.label.orderLogCreatedDate": "建立日期",
   "common.label.orderLogDate": "訂單日期",
   "common.label.orderLogId": "訂單編號",
@@ -583,8 +594,6 @@
   "common.label.orderLogPrice": "訂單金額",
   "common.label.orderLogPriceTotal": "訂單總額",
   "common.label.orderLogStatus": "訂單狀態",
-  "common.label.orderLogCategory": "訂單項目",
-  "common.label.otherSpecifyCategories": "其他特定項目",
   "common.label.orderLogUpdatedDate": "更新日期",
   "common.label.orderProductAmount": "項目數量",
   "common.label.orderProductAutoRenew": "自動續訂",
@@ -594,8 +603,8 @@
   "common.label.orderProductPriceTotal": "項目總額",
   "common.label.orderProductType": "項目種類",
   "common.label.orderStatus": "訂單狀態",
-  "common.label.orderCategory": "訂單項目",
   "common.label.originalPrice": "原價",
+  "common.label.otherSpecifyCategories": "其他特定項目",
   "common.label.ownedCoins": "持有代幣",
   "common.label.owner": "建立者",
   "common.label.pageTitle": "Page Title",
@@ -639,6 +648,7 @@
   "common.label.publishSettings": "發佈設定",
   "common.label.publishedCreators": "已公開 ({count})",
   "common.label.purchase": "購買",
+  "common.label.reason": "原因",
   "common.label.resetPassword": "重設密碼",
   "common.label.roleAdmin": "身份管理",
   "common.label.roleSettings": "身份設定",
@@ -740,6 +750,7 @@
   "common.menu.tempoDelivery": "節奏交付",
   "common.period.no": "無使用期限",
   "common.placeholder.enterUrlLink": "輸入網址連結",
+  "common.placeholder.rejectedReason": "請輸入拒絕原因",
   "common.placeholder.useCommaToSeparateKeywords": "關鍵字需以「 , 」做為區隔",
   "common.product.activityTicket": "活動票券",
   "common.product.allActivityTicket": "全部活動",
@@ -752,11 +763,6 @@
   "common.product.allProgramPackagePlan": "全部課程組合",
   "common.product.allProgramPlan": "全部課程方案",
   "common.product.allProjectPlan": "全部專案",
-  "common.label.allProjectPlan": "全部專案",
-  "common.label.allAppointmentPlan": "全部預約",
-  "common.label.allPodcastPlan": "全部廣播訂閱頻道",
-  "common.label.allCouponPlan": "所有折價方案",
-  "common.label.allVocherPlan": "所有兌換方案",
   "common.product.appointmentPlan": "預約",
   "common.product.card": "會員卡",
   "common.product.merchandise": "商品",
@@ -806,6 +812,7 @@
   "common.status.unknown": "未知",
   "common.status.unpublished": "尚未發佈",
   "common.status.visible": "顯示",
+  "common.text.applyingProjectRole": "{name} 申請標成為「{identity}」",
   "common.text.cancelSubscriptionDate": "已於 {date} 取消訂閱",
   "common.text.cancelSubscriptionDescription": "取消訂閱後，此用戶將於下期停止服務，且不再自動扣款。",
   "common.text.cancelSubscriptionTitle": "確定要取消訂閱嗎?",
@@ -841,6 +848,7 @@
   "common.ui.addParticipant": "新增參與者",
   "common.ui.addProperty": "新增欄位",
   "common.ui.addToCart": "加入購物車",
+  "common.ui.agree": "同意",
   "common.ui.back": "返回",
   "common.ui.backToHomepage": "回首頁",
   "common.ui.backstage": "管理後台",
@@ -940,10 +948,6 @@
   "common.unit.month": "月",
   "common.unit.second": "秒",
   "common.unit.week": "週",
-  "common.category.all": "全部產品",
-  "common.category.specify": "指定產品",
-  "common.category.specifyCouponPlan": "指定折價方案",
-  "common.category.specifyVoucherPlan": "指定兌換方案",
   "contract.event.successfullyRevoked": "合約已解除！",
   "contract.status.agreed": "已簽署",
   "contract.status.pending": "未簽署",
