--- a/src/translations/locales/zh-cn.json
+++ b/src/translations/locales/zh-cn.json
@@ -447,6 +447,10 @@
   "common.MetaProductDeletionBlock.deleteProduct": "刪除{metaProduct}",
   "common.MetaProductDeletionBlock.deleteProductWarning": "請仔細確認是否真的要刪除{metaProduct}，因為一旦刪除就無法恢復。",
   "common.MetaProductDeletionBlock.successfullyDeleted": "Successfully deleted",
+  "common.category.all": "全部產品",
+  "common.category.specify": "指定產品",
+  "common.category.specifyCouponPlan": "指定折價方案",
+  "common.category.specifyVoucherPlan": "指定兌換方案",
   "common.confirmPrivatelyPublishedNotation": "將不會出現在列表，僅以私下提供連結的方式。",
   "common.confirmPrivatelyPublishedTitle": "確定要設為私密發佈？",
   "common.event.cancelSubscriptionSuccess": "取消订阅成功",
@@ -469,17 +473,22 @@
   "common.label.adminBackstage": "管理后台",
   "common.label.all": "全部",
   "common.label.allActivityTicket": "所有实体活动",
+  "common.label.allAppointmentPlan": "全部預約",
+  "common.label.allCouponPlan": "所有折價方案",
   "common.label.allGiftPlan": "所有贈品方案",
   "common.label.allMembers": "全部会员",
   "common.label.allMembershipCard": "所有会员卡",
   "common.label.allMerchandise": "所有商品",
+  "common.label.allPodcastPlan": "全部廣播訂閱頻道",
   "common.label.allPodcastProgram": "所有播客",
   "common.label.allProgram": "所有单次课程",
   "common.label.allProgramContent": "所有课程内容",
   "common.label.allProgramPackage": "所有课程组合",
   "common.label.allProgramPackagePlan": "所有课程组合方案",
   "common.label.allProgramPlan": "所有订阅方案",
+  "common.label.allProjectPlan": "全部專案",
   "common.label.allShop": "全部商店",
+  "common.label.allVocherPlan": "所有兌換方案",
   "common.label.alreadyMember": "已经是是会员吗？",
   "common.label.amountDollar": "{amount} 元",
   "common.label.amountParticipants": "{amount} 人",
@@ -569,11 +578,13 @@
   "common.label.ogTitle": "og:title",
   "common.label.openGraphSettings": "Open Graph Settings",
   "common.label.optional": "非必填",
+  "common.label.orderCategory": "訂單項目",
   "common.label.orderDiscountId": "折扣编号",
   "common.label.orderDiscountName": "折扣名称",
   "common.label.orderDiscountPrice": "折扣金额",
   "common.label.orderDiscountPriceTotal": "折扣总额",
   "common.label.orderDiscountType": "折扣类别",
+  "common.label.orderLogCategory": "訂單項目",
   "common.label.orderLogCreatedDate": "建立日期",
   "common.label.orderLogDate": "订单日期",
   "common.label.orderLogId": "订单编号",
@@ -583,8 +594,6 @@
   "common.label.orderLogPrice": "订单金额",
   "common.label.orderLogPriceTotal": "订单总额",
   "common.label.orderLogStatus": "订单状态",
-  "common.label.orderLogCategory": "訂單項目",
-  "common.label.otherSpecifyCategories": "其他特定項目",
   "common.label.orderLogUpdatedDate": "更新日期",
   "common.label.orderProductAmount": "项目数量",
   "common.label.orderProductAutoRenew": "自动续订",
@@ -595,6 +604,7 @@
   "common.label.orderProductType": "项目种类",
   "common.label.orderStatus": "订单状态",
   "common.label.originalPrice": "原价",
+  "common.label.otherSpecifyCategories": "其他特定項目",
   "common.label.ownedCoins": "持有代币",
   "common.label.owner": "建立者",
   "common.label.pageTitle": "Page Title",
@@ -638,6 +648,7 @@
   "common.label.publishSettings": "发布设定",
   "common.label.publishedCreators": "已公开 ({count})",
   "common.label.purchase": "购买",
+  "common.label.reason": "reason",
   "common.label.resetPassword": "重设密码",
   "common.label.roleAdmin": "身份管理",
   "common.label.roleSettings": "身份设定",
@@ -739,6 +750,7 @@
   "common.menu.tempoDelivery": "节奏交付",
   "common.period.no": "无使用期限",
   "common.placeholder.enterUrlLink": "输入网址连结",
+  "common.placeholder.rejectedReason": "please enter reject reason",
   "common.placeholder.useCommaToSeparateKeywords": "Use comma to separate keywords",
   "common.product.activityTicket": "活动票券",
   "common.product.allActivityTicket": "全部活动",
@@ -751,11 +763,6 @@
   "common.product.allProgramPackagePlan": "全部课程组合",
   "common.product.allProgramPlan": "全部课程方案",
   "common.product.allProjectPlan": "全部专案",
-  "common.label.allProjectPlan": "全部專案",
-  "common.label.allAppointmentPlan": "全部預約",
-  "common.label.allPodcastPlan": "全部廣播訂閱頻道",
-  "common.label.allCouponPlan": "所有折價方案",
-  "common.label.allVocherPlan": "所有兌換方案",
   "common.product.appointmentPlan": "预约",
   "common.product.card": "会员卡",
   "common.product.merchandise": "商品",
@@ -805,6 +812,7 @@
   "common.status.unknown": "未知",
   "common.status.unpublished": "尚未发布",
   "common.status.visible": "显示",
+  "common.text.applyingProjectRole": "{name} 申請標成為「{identity}」",
   "common.text.cancelSubscriptionDate": "已于 {date} 取消订阅",
   "common.text.cancelSubscriptionDescription": "取消订阅后，此用户将于下期停止服务，且不再自动扣款。",
   "common.text.cancelSubscriptionTitle": "确定要取消订阅吗?",
@@ -840,6 +848,7 @@
   "common.ui.addParticipant": "Add participant",
   "common.ui.addProperty": "新增栏位",
   "common.ui.addToCart": "加入购物车",
+  "common.ui.agree": "Agree",
   "common.ui.back": "返回",
   "common.ui.backToHomepage": "回首页",
   "common.ui.backstage": "管理后台",
