[REFACTOR] update translation

--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -468,7 +468,7 @@
   "common.label.adMaterial": "廣告素材",
   "common.label.adminBackstage": "管理後台",
   "common.label.all": "全部",
-  "common.label.allActivityTicket": "所有實體活動",
+  "common.label.allActivityTicket": "所有活動",
   "common.label.allGiftPlan": "所有贈品方案",
   "common.label.allMembers": "全部會員",
   "common.label.allMembershipCard": "所有會員卡",
@@ -478,7 +478,7 @@
   "common.label.allProgramContent": "所有課程內容",
   "common.label.allProgramPackage": "所有課程組合",
   "common.label.allProgramPackagePlan": "所有課程組合方案",
-  "common.label.allProgramPlan": "所有訂閱方案",
+  "common.label.allProgramPlan": "所有課程方案",
   "common.label.allShop": "全部商店",
   "common.label.alreadyMember": "已經是是會員嗎？",
   "common.label.amountDollar": "{amount} 元",
