[FEATURE] add text and video program content type

--- a/src/translations/locales/en-us.json
+++ b/src/translations/locales/en-us.json
@@ -2129,23 +2129,24 @@
   "program.text.videoPlaceholder": "video url",
   "program.ui.checkProgramContent": "Check program content",
   "program.ui.chooseFile": "Choose File",
-  "program.ui.createContent": "Add Content",
+  "program.ProgramContentSectionAdminCard.createContent": "Add Content",
   "program.ui.createExerciseChoice": "Add option",
   "program.ui.createExerciseQuestion": "Add Question",
   "program.ui.delete": "Delete file",
   "program.ui.deleteChoice": "DeleteChoice",
   "program.ui.deleteContent": "Delete Content",
   "program.ui.deleteQuestion": "Delete Question",
-  "program.ui.deleteSection": "Delete Section",
+  "program.ProgramContentSectionAdminCard.deleteSection": "Delete Section",
   "program.ui.deliver": "Enable",
   "program.ui.delivery": "Delivery Course",
   "program.ui.difficulty": "Difficulty",
   "program.ui.editProgram": "Edit Program",
   "program.ui.manageCaption": "Manage Captions",
-  "program.ui.practiceContent": "Homework Practice",
+  "program.ProgramContentSectionAdminCard.practiceContent": "Homework Practice",
   "program.ui.preview": "Preview",
-  "program.ui.programContent": "Program Content",
-  "program.ui.programExercise": "Exercise in class",
+  "program.ProgramContentSectionAdminCard.videoContent": "Video Content",
+  "program.ProgramContentSectionAdminCard.articleContent": "Article Content",
+  "program.ProgramContentSectionAdminCard.programExercise": "Exercise in class",
   "program.ui.reUpload": "Reupload",
   "program.ui.sortContents": "Sort Contents",
   "program.ui.sortProgram": "Sort Program",
