--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -2129,23 +2129,24 @@
   "program.text.videoPlaceholder": "url video",
   "program.ui.checkProgramContent": "Kiểm tra nội dung chương trình",
   "program.ui.chooseFile": " Chọn tệp ",
-  "program.ui.createContent": "Thêm nội dung",
+  "program.ProgramContentSectionAdminCard.createContent": "Thêm nội dung",
   "program.ui.createExerciseChoice": " Thêm tùy chọn ",
   "program.ui.createExerciseQuestion": " Thêm câu hỏi ",
   "program.ui.delete": " Xóa tệp ",
   "program.ui.deleteChoice": "DeleteChoice ",
   "program.ui.deleteContent": "Xóa nội dung",
   "program.ui.deleteQuestion": " Xóa câu hỏi ",
-  "program.ui.deleteSection": "Delete Section",
+  "program.ProgramContentSectionAdminCard.deleteSection": "Delete Section",
   "program.ui.deliver": " Bật ",
   "program.ui.delivery": " Khóa học Giao hàng ",
   "program.ui.difficulty": " Khó khăn ",
   "program.ui.editProgram": " Chỉnh sửa chương trình ",
   "program.ui.manageCaption": " Quản lý Phụ đề ",
-  "program.ui.practiceContent": " Thực hành Bài tập về nhà ",
+  "program.ProgramContentSectionAdminCard.practiceContent": " Thực hành Bài tập về nhà ",
   "program.ui.preview": " Xem trước ",
-  "program.ui.programContent": " Nội dung chương trình ",
-  "program.ui.programExercise": " Bài tập trong lớp ",
+  "program.ProgramContentSectionAdminCard.videoContent": " Nội dung video",
+  "program.ProgramContentSectionAdminCard.articleContent": " Nội dung bài viết",
+  "program.ProgramContentSectionAdminCard.programExercise": " Bài tập trong lớp ",
   "program.ui.reUpload": "Tải lại ",
   "program.ui.sortContents": " Sắp xếp nội dung ",
   "program.ui.sortProgram": "Sắp xếp chương trình",
