--- a/src/translations/locales/zh-cn.json
+++ b/src/translations/locales/zh-cn.json
@@ -2129,23 +2129,24 @@
   "program.text.videoPlaceholder": "贴上影片网址",
   "program.ui.checkProgramContent": "查看课程内容",
   "program.ui.chooseFile": "选择档案",
-  "program.ui.createContent": "新增内容",
+  "program.ProgramContentSectionAdminCard.createContent": "新增内容",
   "program.ui.createExerciseChoice": "新增选项",
   "program.ui.createExerciseQuestion": "新增题目",
   "program.ui.delete": "删除档案",
   "program.ui.deleteChoice": "删除选项",
   "program.ui.deleteContent": "删除内容",
   "program.ui.deleteQuestion": "删除题目",
-  "program.ui.deleteSection": "删除区块",
+  "program.ProgramContentSectionAdminCard.deleteSection": "删除区块",
   "program.ui.deliver": "启用",
   "program.ui.delivery": "交付课程",
   "program.ui.difficulty": "难易度",
   "program.ui.editProgram": "编辑课程",
   "program.ui.manageCaption": "管理字幕",
-  "program.ui.practiceContent": "作业练习",
+  "program.ProgramContentSectionAdminCard.practiceContent": "作业练习",
   "program.ui.preview": "预览",
-  "program.ui.programContent": "课程内容",
-  "program.ui.programExercise": "随堂测验",
+  "program.ProgramContentSectionAdminCard.videoContent": "视频内容",
+  "program.ProgramContentSectionAdminCard.articleContent": "图文内容",
+  "program.ProgramContentSectionAdminCard.programExercise": "随堂测验",
   "program.ui.reUpload": "重新上传",
   "program.ui.sortContents": "排序内容",
   "program.ui.sortProgram": "课程排序",
