--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -2102,7 +2102,7 @@
   "program.text.deleteContentWarning": "你確定要刪除此內容？此動作無法還原",
   "program.text.deletePracticeWarning": "將刪除所有與此作業相關資料且不可復原，確定要刪除嗎？",
   "program.text.deleteQuestionDescription": "題目刪除即不可恢復，確定要刪除嗎？",
-  "program.text.deleteSectionWarning": "此區塊內的所有內容將被刪除，此動作無法還原",
+  "program.ProgramContentSectionAdminCard.deleteSectionWarning": "此區塊內的所有內容將被刪除，此動作無法還原",
   "program.text.discountDownNotation": "定價或優惠價 - 首期折扣 = 首期支付金額\nEX：100 - 20 = 80，此欄填入 20",
   "program.text.empty": "沒有課程問題",
   "program.text.enrolledPerpetualCount": "已售 {count} 人",
@@ -2133,23 +2133,24 @@
   "program.text.videoPlaceholder": "貼上影片網址",
   "program.ui.checkProgramContent": "查看課程內容",
   "program.ui.chooseFile": "選擇檔案",
-  "program.ui.createContent": "新增內容",
+  "program.ProgramContentSectionAdminCard.createContent": "新增內容",
   "program.ui.createExerciseChoice": "新增選項",
   "program.ui.createExerciseQuestion": "新增題目",
   "program.ui.delete": "刪除檔案",
   "program.ui.deleteChoice": "刪除選項",
   "program.ui.deleteContent": "刪除內容",
   "program.ui.deleteQuestion": "刪除題目",
-  "program.ui.deleteSection": "刪除區塊",
+  "program.ProgramContentSectionAdminCard.deleteSection": "刪除區塊",
   "program.ui.deliver": "啟用",
   "program.ui.delivery": "交付課程",
   "program.ui.difficulty": "難易度",
   "program.ui.editProgram": "編輯課程",
   "program.ui.manageCaption": "管理字幕",
-  "program.ui.practiceContent": "作業練習",
+  "program.ProgramContentSectionAdminCard.practiceContent": "作業練習",
   "program.ui.preview": "預覽",
-  "program.ui.programContent": "課程內容",
-  "program.ui.programExercise": "隨堂測驗",
+  "program.ProgramContentSectionAdminCard.videoContent": "影片內容",
+  "program.ProgramContentSectionAdminCard.articleContent": "圖文內容",
+  "program.ProgramContentSectionAdminCard.programExercise": "隨堂測驗",
   "program.ui.reUpload": "重新上傳",
   "program.ui.sortContents": "排序內容",
   "program.ui.sortProgram": "課程排序",
