--- a/src/translations/locales/id.json
+++ b/src/translations/locales/id.json
@@ -2129,23 +2129,24 @@
   "program.text.videoPlaceholder": "url video",
   "program.ui.checkProgramContent": "Periksa konten program",
   "program.ui.chooseFile": "Pilih File",
-  "program.ui.createContent": "Tambahkan Konten",
+  "program.ProgramContentSectionAdminCard.createContent": "Tambahkan Konten",
   "program.ui.createExerciseChoice": "Tambahkan opsi",
   "program.ui.createExerciseQuestion": "Tambahkan Pertanyaan",
   "program.ui.delete": "Hapus file",
   "program.ui.deleteChoice": "DeleteChoice",
   "program.ui.deleteContent": "Hapus Konten",
   "program.ui.deleteQuestion": "Hapus Pertanyaan",
-  "program.ui.deleteSection": "Hapus Bagian",
+  "program.ProgramContentSectionAdminCard.deleteSection": "Hapus Bagian",
   "program.ui.deliver": "Aktifkan",
   "program.ui.delivery": "Kursus Pengiriman",
   "program.ui.difficulty": "Kesulitan",
   "program.ui.editProgram": "Edit Program",
   "program.ui.manageCaption": "Kelola Teks",
-  "program.ui.practiceContent": "Latihan Pekerjaan Rumah",
+  "program.ProgramContentSectionAdminCard.practiceContent": "Latihan Pekerjaan Rumah",
   "program.ui.preview": "Pratinjau",
-  "program.ui.programContent": "Isi Program",
-  "program.ui.programExercise": "Latihan di kelas",
+  "program.ProgramContentSectionAdminCard.videoContent": "Konten Video",
+  "program.ProgramContentSectionAdminCard.articleContent": "Konten Artikel",
+  "program.ProgramContentSectionAdminCard.programExercise": "Latihan di kelas",
   "program.ui.reUpload": "Unggah ulang",
   "program.ui.sortContents": "Urutkan Konten",
   "program.ui.sortProgram": "Urutkan Program",
