[BUGFIX] add isParticipantsVisible in ProgramPlanAdminModal

--- a/src/translations/locales/en-us.json
+++ b/src/translations/locales/en-us.json
@@ -2034,6 +2034,9 @@
   "program.ProgramPlanAdminModal.subscriptionPlan": "訂閱付費方案",
   "program.ProgramPlanAdminModal.unavailableForPastContent": "僅可看指定方案未來內容",
   "program.ProgramPlanAdminModal.unpublished": "停售，此方案暫停對外銷售並隱藏",
+  "program.ProgramPlanAdminModal.isParticipantsVisible": "Participants visible",
+  "program.ProgramPlanAdminModal.visible": "visible",
+  "program.ProgramPlanAdminModal.invisible": "invisible",
   "program.event.editIssueFailed": "Edit issue failed",
   "program.label.allProgram": "All Program",
   "program.label.allowMultipleAnswers": "Allow multiple correct answers",
