--- a/src/translations/locales/zh-cn.json
+++ b/src/translations/locales/zh-cn.json
@@ -2034,6 +2034,9 @@
   "program.ProgramPlanAdminModal.subscriptionPlan": "訂閱付費方案",
   "program.ProgramPlanAdminModal.unavailableForPastContent": "僅可看指定方案未來內容",
   "program.ProgramPlanAdminModal.unpublished": "停售，此方案暫停對外銷售並隱藏",
+  "program.ProgramPlanAdminModal.isParticipantsVisible": "购买人数",
+  "program.ProgramPlanAdminModal.visible": "显示",
+  "program.ProgramPlanAdminModal.invisible": "隐藏",
   "program.event.editIssueFailed": "无法更改问题",
   "program.label.allProgram": "全部课程",
   "program.label.allowMultipleAnswers": "允许多个正确解答",
