--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -2038,6 +2038,9 @@
   "program.ProgramPlanAdminModal.subscriptionPlan": "訂閱付費方案",
   "program.ProgramPlanAdminModal.unavailableForPastContent": "僅可看指定方案未來內容",
   "program.ProgramPlanAdminModal.unpublished": "停售，此方案暫停對外銷售並隱藏",
+  "program.ProgramPlanAdminModal.isParticipantsVisible": "購買人數",
+  "program.ProgramPlanAdminModal.visible": "顯示",
+  "program.ProgramPlanAdminModal.invisible": "隱藏",
   "program.event.editIssueFailed": "無法更改問題",
   "program.label.allProgram": "全部課程",
   "program.label.allowMultipleAnswers": "允許多個正確解答",
