--- a/src/translations/locales/id.json
+++ b/src/translations/locales/id.json
@@ -2034,6 +2034,9 @@
   "program.ProgramPlanAdminModal.subscriptionPlan": "訂閱付費方案",
   "program.ProgramPlanAdminModal.unavailableForPastContent": "僅可看指定方案未來內容",
   "program.ProgramPlanAdminModal.unpublished": "停售，此方案暫停對外銷售並隱藏",
+  "program.ProgramPlanAdminModal.isParticipantsVisible": "Peserta terlihat",
+  "program.ProgramPlanAdminModal.visible": "terlihat",
+  "program.ProgramPlanAdminModal.invisible": "tak terlihat",
   "program.event.editIssueFailed": "Sunting masalah gagal",
   "program.label.allProgram": "Semua Program",
   "program.label.allowMultipleAnswers": "Izinkan beberapa jawaban benar",
