--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -2034,6 +2034,9 @@
   "program.ProgramPlanAdminModal.subscriptionPlan": "訂閱付費方案",
   "program.ProgramPlanAdminModal.unavailableForPastContent": "僅可看指定方案未來內容",
   "program.ProgramPlanAdminModal.unpublished": "停售，此方案暫停對外銷售並隱藏",
+  "program.ProgramPlanAdminModal.isParticipantsVisible": "Người tham gia có thể nhìn thấy",
+  "program.ProgramPlanAdminModal.visible": "có thể nhìn thấy",
+  "program.ProgramPlanAdminModal.invisible": "vô hình",
   "program.event.editIssueFailed": "Chỉnh sửa sự cố không thành công",
   "program.label.allProgram": "Tất cả chương trình",
   "program.label.allowMultipleAnswers": " Cho phép nhiều câu trả lời đúng ",
